Conclude the project, and learned how important set path like export FLASK_ENV = development and FLASK_APP = app.py, then flask run

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
     </head>
     <body>
         <h2>Flask Web App</h2>
+        <p>Pick up feature</p>
+<!--        When the user clicks the submit button, the browser will send the form data to the /pref_quiz route of the Flask web application.-->
+        <form method="POST" action="/pref_quiz">
+            <input type="submit" value="Prefecture Capital quiz">
+        </form>
+        <br>
         <a href="/logout">Logout</a>
     </body>
 </html>
